--- a/.github/workflows/generate-atom-news-feed.yaml
+++ b/.github/workflows/generate-atom-news-feed.yaml
@@ -40,6 +40,12 @@ jobs:
       working-directory: ./.github/ci
       run:  node generate-news-feed.js
 
+    - name: Print Feed
+      run:  |
+        ls -la news-and-stories/press-releases/feed.xml
+        head -20 news-and-stories/press-releases/feed.xml
+        
+
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
