--- a/.github/workflows/generate-atom-news-feed.yaml
+++ b/.github/workflows/generate-atom-news-feed.yaml
@@ -10,7 +10,7 @@ on:
   pull_request:
     paths:
       - '.github/ci/**'
-      - '.github/workflows/generate-news-feed.yaml'
+      - '.github/workflows/generate-atom-news-feed.yaml'
 
 jobs:
   build:
@@ -39,6 +39,12 @@ jobs:
     - name: Generate Feed
       working-directory: ./.github/ci
       run:  node generate-news-feed.js
+
+    - name: Print Feed
+      run:  |
+        ls -la news-and-stories/press-releases/feed.xml
+        head -20 news-and-stories/press-releases/feed.xml
+        
 
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v4
