--- a/.github/workflows/generate-atom-news-feed.yaml
+++ b/.github/workflows/generate-atom-news-feed.yaml
@@ -12,6 +12,11 @@ on:
       - '.github/ci/**'
       - '.github/workflows/generate-news-feed.yaml'
 
+env:
+  ENDPOINT: "https://www.volvotrucks.ca/en-ca/press-releases.json"
+  FEEDINFOENDPOINT: "https://www.volvotrucks.ca/en-ca/news-and-stories/press-releases/feed-info.json"
+  TARGETDIRECTORY: "../../news-and-stories/press-releases"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,7 +43,7 @@ jobs:
 
     - name: Generate Feed
       working-directory: ./.github/ci
-      run:  node generate-news-feed.js
+      run:  node generate-news-feed.js ${{ env.ENDPOINT }} ${{ env.FEEDINFOENDPOINT }} ${{ env.TARGETDIRECTORY }}
 
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v4
