--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,10 @@
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "rules": {
     "selector-class-pattern": [
-      "^[a-z]([-]?[a-z0-9]+)*(__[a-z0-9]([-]?[a-z0-9]+)*)?(--[a-z0-9]([-]?[a-z0-9]+)*)?$"
+      "^[a-z]([-]?[a-z0-9]+)*(__[a-z0-9]([-]?[a-z0-9]+)*)?(--[a-z0-9]([-|_]?[a-z0-9]+)*)?$",
+      {
+        "resolveNestedSelectors": true
+      }
     ]
   }
 }
