--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint": "npm run lint:js && npm run lint:css",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "**/*.{js,css}": [
+      "npm run lint"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adobe/helix-project-boilerplate.git"
@@ -33,6 +38,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.27.5",
     "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
     "sinon": "15.0.1",
     "stylelint": "14.16.1",
     "stylelint-config-prettier": "9.0.4",
