Move some configuration to env file #239 (#259)
prevent config from being marked as change with release

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ helix-importer-ui
 .idea/*
 /tools/content-mirror/volvotrucks.us/
 /tools/content-mirror/hlxsite/
+
+fstab.yaml
+pull_request_template.md
+README.md
+tools/importer/import.js
+tools/importer/sub-nav.js
+config.json
