add nav exclusions on search

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -138,6 +138,12 @@ indices:
       - '/footer'
       - '/**/nav'
       - '/nav'
+      - '/**/nav-*'
+      - '/nav-*'
+      - '/**/*-nav'
+      - '/*-nav'
+      - '/**/sub-nav-*'
+      - '/sub-nav-*'
       - '/fragments/**'
       - '/**/sub-nav'
       - '/news-and-stories/tags'
