--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adobe/helix-project-boilerplate",
+  "name": "@adobe/aem-boilerplate",
   "private": true,
   "version": "1.3.0",
   "description": "Starter project for Adobe Helix",
@@ -30,7 +30,7 @@
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@web/test-runner": "0.15.0",
     "@web/test-runner-commands": "0.6.5",
-    "chai": "4.3.7",
+    "chai": "5.1.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
