Revert the change in release.yml

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -13,7 +13,7 @@ changelog:
         - NFR
     - title: Bugfixes
       labels:
-        - bugfix
+        - Bugfix
     - title: Known issues
       labels:
         - wontfix
