--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -32,7 +32,8 @@
       "includePaths": [
         "**.docx**"
       ],
-      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)",
+      "passConfig": true
     }
   ]
 }
