--- a/.github/workflows/publish-notifier.yaml
+++ b/.github/workflows/publish-notifier.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - run: |
         echo "Status: ${{ github.event.client_payload.status }}"
+        echo "Site: ${{ github.event.client_payload.site }}"
         echo "Path: ${{ github.event.client_payload.path }}"
   notify-connector:
     if: (github.event.client_payload.status == 200 || github.event.client_payload.status == 204) && endsWith(github.event.client_payload.path, '.md')
@@ -19,7 +20,7 @@ jobs:
       run: |
         sleep 1s
         PAGE_PATH=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$//g')
-        WEBSITE_NAME="${{ vars.WEBSITE_NAME }}"
+        WEBSITE_NAME="${{ github.event.client_payload.site }}"
         URI=$(echo "${{ vars.CONNECTOR_DOMAIN }}/$WEBSITE_NAME")
         BODY='{ "paths": [ "'$PAGE_PATH'" ] }'
         BODY="$(echo "$BODY" | jq -c)"
