--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:js": "eslint .",
     "lint:css": "stylelint 'blocks/**/*.css' 'styles/*.css' 'templates/**/*.css'",
     "lint": "npm run lint:js && npm run lint:css",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postupdate": "copyfiles -u 3 'node_modules/video.js/dist/video.min.js' 'node_modules/video.js/dist/video-js.min.css' scripts/videojs"
   },
   "lint-staged": {
     "*.js": "npm run lint:js",
@@ -34,6 +35,7 @@
     "@web/test-runner": "0.18.2",
     "@web/test-runner-commands": "0.9.0",
     "chai": "5.1.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
@@ -41,6 +43,7 @@
     "lint-staged": "^15.2.7",
     "sinon": "17.0.1",
     "stylelint": "16.8.1",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint-config-standard": "36.0.1",
+    "video.js": "8.17.3"
   }
 }
