--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "volvotrucks-na",
+  "name": "@adobe/aem-boilerplate",
   "private": true,
-  "version": "19.0.0",
-  "description": "Volvo Trucks North America",
-  "engines": {
-    "node": ">=v20.15.1 <23",
-    "npm": ">=10.7.0"
-  },
+  "version": "21.0.0",
+  "description": "Starter project for Adobe Helix",
   "scripts": {
     "dev": "npx @adobe/helix-cli up",
     "test": "wtr \"./test/**/*.test.js\" --node-resolve --port=2000 --coverage",
@@ -22,14 +18,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aemsites/volvotrucks-na"
+    "url": "git+https://github.com/adobe/helix-project-boilerplate.git"
   },
   "author": "Adobe",
-  "license": "UNLICENSED",
+  "license": "Apache License 2.0",
+  "bugs": {
+    "url": "https://github.com/adobe/helix-project-boilerplate/issues"
+  },
   "homepage": "https://github.com/adobe/helix-project-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/eslint-parser": "7.25.1",
+    "@babel/core": "7.24.5",
+    "@babel/eslint-parser": "7.24.5",
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@web/test-runner": "0.18.2",
     "@web/test-runner-commands": "0.9.0",
@@ -38,9 +37,9 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.2",
     "sinon": "17.0.1",
-    "stylelint": "16.8.1",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint": "16.5.0",
+    "stylelint-config-standard": "36.0.0"
   }
 }
